feat: when opening the modal the current category and domain are selected
- When oping current group relations are loaded as selected

Refs: oph-722

--- a/app/components/inventory/editable-group-row.hbs
+++ b/app/components/inventory/editable-group-row.hbs
@@ -182,8 +182,9 @@
   </:footer>
 </AuModal>
 
-<Inventory::ReplaceGroupModal
-  @group={{@group}}
-  @isOpen={{this.isReplaceModelOpen}}
-  @onCancel={{fn (mut this.isReplaceModelOpen) false}}
-/>
+{{#if this.isReplaceModelOpen}}
+  <Inventory::ReplaceGroupModal
+    @group={{@group}}
+    @onCancel={{fn (mut this.isReplaceModelOpen) false}}
+  />
+{{/if}}
