--- a/app/components/inventory/replace-group-modal.hbs
+++ b/app/components/inventory/replace-group-modal.hbs
@@ -1,4 +1,4 @@
-<AuModal @modalOpen={{@isOpen}} @closable={{true}} @closeModal={{@onCancel}}>
+<AuModal @modalOpen={{true}} @closable={{true}} @closeModal={{@onCancel}}>
   <:title>Vervang groep in processen</:title>
   <:body>
     De groep
