--- a/app/components/inventory/select-group.hbs
+++ b/app/components/inventory/select-group.hbs
@@ -10,6 +10,7 @@
     @allowClear={{true}}
     @triggerId={{@id}}
     @disabled={{@isDisabled}}
+    @loading={{this.selectedGroup.isRunning}}
     as |group|
   >
     {{group.label}}
