--- a/app/components/inventory/editable-group-row.hbs
+++ b/app/components/inventory/editable-group-row.hbs
@@ -159,7 +159,9 @@
       <AuButton
         @skin="secondary"
         {{on "click" (fn (mut this.isArchiveModelOpen) false)}}
-      >Annuleer</AuButton>
+      >
+        Annuleer
+      </AuButton>
       <AuButton
         @disabeld={{or this.isArchiving this.isCheckingForUsage}}
         @loading={{or this.isArchiving this.isCheckingForUsage}}
@@ -172,7 +174,9 @@
         @alert={{true}}
         @skin={{if this.usageMessage "secondary" "primary"}}
         {{on "click" this.archiveGroup}}
-      >Archiveer</AuButton>
+      >
+        Archiveer
+      </AuButton>
       {{#if this.usageMessage}}
         <AuButton {{on "click" this.openReplaceModal}}>
           Vervang
@@ -186,5 +190,6 @@
   <Inventory::ReplaceGroupModal
     @group={{@group}}
     @onCancel={{fn (mut this.isReplaceModelOpen) false}}
+    @onAllProcessesUpdated={{this.archiveGroup}}
   />
 {{/if}}
