feat: show a warning icon when linked process is archived
It was only shown when a parameter was archived but now it also shows when the actual process has been archived

Refs: oph-722

--- a/app/components/process/inventory-process-card.hbs
+++ b/app/components/process/inventory-process-card.hbs
@@ -44,10 +44,10 @@
               <div class="au-u-flex au-u-flex--row">
                 <div class="au-u-flex au-u-vertical-center">
                   <p> {{this.processConceptTitle}}</p>
-                  {{#if this.hasProcessArchivedProperties}}
+                  {{#if this.linkedProcessWarnText}}
                     <Shared::Tooltip
                       @show={{true}}
-                      @text="Dit process heeft gearchiveerde parameters"
+                      @text={{this.linkedProcessWarnText}}
                     >
                       <AuIcon
                         class="color--warning"
