--- a/app/templates/mock-login.hbs
+++ b/app/templates/mock-login.hbs
@@ -1,4 +1,4 @@
-<StaticPage class="au-c-body-container au-c-body-container--scroll">
+<StaticPage>
   <div class="au-o-layout au-o-region-large">
     <MockLogin as |login|>
       {{#if login.isLoading}}
@@ -10,7 +10,6 @@
         <AuHeading @skin="4">Kies een bestuurseenheid om mee in te loggen.</AuHeading>
         <p class="au-u-margin-top-small au-u-margin-bottom">
           {{#let (unique-id) as |id|}}
-            <AuLabel for={{id}}>Bestuurseenheid zoeken</AuLabel>
             <input
               class="au-c-input au-c-input--block js-js-input-pattern-bound"
               id={{id}}
