refactor: hide footer on mocklogin page
This is only for pages that are outside of the login

Refs: oph-722

--- a/app/components/static-page.hbs
+++ b/app/components/static-page.hbs
@@ -17,7 +17,8 @@
         {{yield}}
       </div>
     </section>
-
-    <Footer />
+    {{#unless @isFooterHidden}}
+      <Footer />
+    {{/unless}}
   </m.content>
 </AuMainContainer>
