--- a/app/templates/mock-login.hbs
+++ b/app/templates/mock-login.hbs
@@ -1,4 +1,4 @@
-<StaticPage>
+<StaticPage @isFooterHidden={{true}}>
   <div class="au-o-layout au-o-region-large">
     <MockLogin as |login|>
       {{#if login.isLoading}}
