refactor: remove remaining of showing the usage count in the details page
Refs: oph-682

--- a/app/components/process/usage.hbs
+++ b/app/components/process/usage.hbs
@@ -14,7 +14,7 @@
     {{else}}
       {{#if (eq this.organizations.length 0)}}
         <p class="au-u-padding-left">
-          Er zijn momenteel geen organisaties die dit process gebruiken</p>
+          Er zijn momenteel geen organisaties die dit process gebruiken.</p>
       {{else}}
         <AuList
           class="au-o-layout--small au-u-padding-left"
