OPH-682 | Show usage of process over organizations (#146)
* feat: show the count of organizations using the process

Refs: oph-682

* refactor: remove navigation-bar from layout-detail

This is handled by the application controller now

Refs: oph-682

* refactor: remove process usage from details card

Refs: oph-682

* feat: show usage in a datacard at the bottom of the detail page

- show it below attachments. Data is ok to in the future show diagrams or some sort
- show the name of organization with the type in a status pill

Refs: oph-682

* refactor: do not use the process-api service for fetching usage but ember data

Refs: oph-682

* delete: remove get organizational-usage from process-api service

Now done by ember-data

Refs: oph-682

* refactor: remove remaining of showing the usage count in the details page

Refs: oph-682

--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -68,4 +68,9 @@
     @trackDownloadFileEvent={{this.trackDownloadFileEvent}}
   />
 
+  <Process::Usage
+    @process={{this.process}}
+    @refreshDataTrigger={{this.isEditingDetails}}
+  />
+
 </AuBodyContainer>
