oph-722 | can replace process group (#147)
* feat: show a replace button when archiving a group that is used in a process

Refs: oph-722

* feat: create replaceGroupModal component

- replace with modal in the admin admin page
- Fetch the category options and show them in the dropdown

Refs: oph-722

* refactor: re-use the select category component

Refs: oph-722

* feat: can also select a domain

Refs: oph-722

* feat: can select a new process group

Refs: oph-722

* feat: error state of select group when replacement is same as original

Refs: oph-722

* feat: when opening the modal the current category and domain are selected

- When oping current group relations are loaded as selected

Refs: oph-722

* feat: conceptual processes are updated with the new category

Refs: oph-722

* feat: add replacedGroups many relation for replacedGroups

Refs: oph-722

* feat: show a warning icon when linked process is archived

It was only shown when a parameter was archived but now it also shows when the actual process has been archived

Refs: oph-722

--- a/app/components/inventory/editable-group-row.hbs
+++ b/app/components/inventory/editable-group-row.hbs
@@ -159,7 +159,9 @@
       <AuButton
         @skin="secondary"
         {{on "click" (fn (mut this.isArchiveModelOpen) false)}}
-      >Annuleer</AuButton>
+      >
+        Annuleer
+      </AuButton>
       <AuButton
         @disabeld={{or this.isArchiving this.isCheckingForUsage}}
         @loading={{or this.isArchiving this.isCheckingForUsage}}
@@ -170,8 +172,24 @@
         }}
         @icon={{if this.usageMessage "alert-triangle" null}}
         @alert={{true}}
+        @skin={{if this.usageMessage "secondary" "primary"}}
         {{on "click" this.archiveGroup}}
-      >Archiveer</AuButton>
+      >
+        Archiveer
+      </AuButton>
+      {{#if this.usageMessage}}
+        <AuButton {{on "click" this.openReplaceModal}}>
+          Vervang
+        </AuButton>
+      {{/if}}
     </AuButtonGroup>
   </:footer>
 </AuModal>
+
+{{#if this.isReplaceModelOpen}}
+  <Inventory::ReplaceGroupModal
+    @group={{@group}}
+    @onCancel={{fn (mut this.isReplaceModelOpen) false}}
+    @onAllProcessesUpdated={{this.archiveGroup}}
+  />
+{{/if}}
