feat: show that the table is loading when going to the next inventory process page
Refs: oph-739

--- a/app/templates/inventory/index.hbs
+++ b/app/templates/inventory/index.hbs
@@ -40,6 +40,7 @@
         @page={{this.page}}
         @size={{this.size}}
         @noDataMessage="Er werden geen zoekresultaten gevonden."
+        @isLoading={{this.isLoadingRoute}}
         as |t|
       >
         <t.content class="au-c-data-table__table--small" as |c|>
