refactor: change text on add and download button for attachments
Now that we can add links we need to be specific for the files

Refs: oph-786

--- a/app/components/process/attachments.hbs
+++ b/app/components/process/attachments.hbs
@@ -5,14 +5,14 @@
     <AuButtonGroup>
       {{#if @canEdit}}
         <AuButton @skin="secondary" {{on "click" this.openAddModal}}>
-          Voeg toe
+          Voeg bestand toe
         </AuButton>
       {{/if}}
       <AuButton
         @disabled={{not this.attachments}}
         {{on "click" (perform this.downloadAttachments)}}
       >
-        Download alles
+        Download alle bestanden
       </AuButton>
     </AuButtonGroup>
   </:header>
