--- a/app/components/download-modal/inventory-processes.hbs
+++ b/app/components/download-modal/inventory-processes.hbs
@@ -1,8 +1,8 @@
 <AuModal @modalOpen={{@isOpen}} @closable={{true}} @closeModal={{@onClose}}>
   <:title>Download processen</:title>
   <:body>
-    <p class="au-u-margin-bottom">Exporteerd de processen van deze pagina of
-      alle geselecteerde inventarisprocessen naar een CSV-bestand</p>
+    <p class="au-u-margin-bottom">Exporteer de processen van deze pagina of alle
+      geselecteerde inventarisprocessen naar een CSV-bestand.</p>
     <div class="au-u-flex au-u-flex--spaced">
       <AuLinkExternal
         role={{@role}}
