--- a/app/components/download-modal/inventory-processes.hbs
+++ b/app/components/download-modal/inventory-processes.hbs
@@ -2,7 +2,7 @@
   <:title>Download processen</:title>
   <:body>
     <p class="au-u-margin-bottom">Exporteer de processen van deze pagina of alle
-      inventarisprocessen naar een CSV-bestand.</p>
+      geselecteerde inventarisprocessen naar een CSV-bestand.</p>
     <div class="au-u-flex au-u-flex--spaced">
       <AuLinkExternal
         role={{@role}}
@@ -21,7 +21,7 @@
         @icon="download"
         @iconAlignment="left"
         {{on "click" this.showIsDownloadingToast}}
-      >Alle processen</AuLinkExternal>
+      >Alle geselecteerde processen</AuLinkExternal>
     </div>
   </:body>
   <:footer>
