feat: the Processen mijn bestuur tab is shown when medewerker or editor
Refs: oph-790

--- a/app/components/process-bar.hbs
+++ b/app/components/process-bar.hbs
@@ -7,6 +7,8 @@
             Alle processen
           </AuLink>
         </Tab>
+      {{/if}}
+      {{#if this.isProcessenMijnBestuurShown}}
         <Tab>
           <AuLink @route="my-local-government" @icon="users-four-of-four">
             Processen mijn bestuur
