--- a/app/components/process/details-card/ipdc-multiple-select.hbs
+++ b/app/components/process/details-card/ipdc-multiple-select.hbs
@@ -7,7 +7,6 @@
       @noMatchesMessage="Geen resultaten"
       @options={{this.products}}
       @search={{perform this.loadIpdcProductsTask}}
-      @onOpen={{perform this.loadIpdcProductsTask}}
       @selected={{@selected}}
       @onChange={{@onChange}}
       @disabled={{@disabled}}
@@ -22,12 +21,9 @@
       @skin="secondary"
       class="au-u-margin-top-none au-u-flex-self-start"
     >
-      Vul hier IPDC-productcodes of -URLs in.
+      Vul hier IPDC-productcodes of -URLs in. Je kan ook zoeken op trefwoorden.
     </AuHelpText>
-    <AuLinkExternal
-      class="au-u-flex-self-start"
-      href={{this.searchInIpdcUrl}}
-    >
+    <AuLinkExternal class="au-u-flex-self-start" href={{this.searchInIpdcUrl}}>
       Zoek in IPDC
     </AuLinkExternal>
   </div>
