feat: add icons for the link and file button in the dropdown
Refs: oph-786

--- a/app/components/process/attachments.hbs
+++ b/app/components/process/attachments.hbs
@@ -8,6 +8,8 @@
         <AuDropdown @title="Voeg toe" @skin="secondary" @alignment="center">
           <AuButton
             role="menuitem"
+            @icon="link-external"
+            @iconAlignment="left"
             @skin="link"
             {{on "click" (fn (mut this.isAddLinkModalOpen) true)}}
           >
@@ -15,6 +17,8 @@
           </AuButton>
           <AuButton
             role="menuitem"
+            @icon="file"
+            @iconAlignment="left"
             @skin="link"
             {{on "click" this.openAddModal}}
           >
