oph 786 | UI update for relevant online sources of a process (#153)
* refactor: remove inline add link to relevant links

TODO add through external trigger

Refs: oph-786

* refactor: change text on add and download button for attachments

Now that we can add links we need to be specific for the files

Refs: oph-786

* refactor: the add modal is opened from parent

Accordion actions can add a new link

Refs: oph-786

* feat: add loading state for update and delete action

Refs: oph-786

* refactor: use a dropdown component to show the voeg toe options

Refs: oph-786

* feat: add icons for the link and file button in the dropdown

Refs: oph-786

--- a/app/components/process/attachments.hbs
+++ b/app/components/process/attachments.hbs
@@ -4,15 +4,33 @@
   <:header>
     <AuButtonGroup>
       {{#if @canEdit}}
-        <AuButton @skin="secondary" {{on "click" this.openAddModal}}>
-          Voeg toe
-        </AuButton>
+        {{! template-lint-disable require-context-role }}
+        <AuDropdown @title="Voeg toe" @skin="secondary" @alignment="center">
+          <AuButton
+            role="menuitem"
+            @icon="link-external"
+            @iconAlignment="left"
+            @skin="link"
+            {{on "click" (fn (mut this.isAddLinkModalOpen) true)}}
+          >
+            Link
+          </AuButton>
+          <AuButton
+            role="menuitem"
+            @icon="file"
+            @iconAlignment="left"
+            @skin="link"
+            {{on "click" this.openAddModal}}
+          >
+            Bestand
+          </AuButton>
+        </AuDropdown>
       {{/if}}
       <AuButton
         @disabled={{not this.attachments}}
         {{on "click" (perform this.downloadAttachments)}}
       >
-        Download alles
+        Download alle bestanden
       </AuButton>
     </AuButtonGroup>
   </:header>
@@ -28,7 +46,13 @@
   </:subheader>
 
   <:card>
-    <Process::RelevantLinks @canEdit={{@canEdit}} @process={{@process}} />
+    <Process::RelevantLinks
+      @process={{@process}}
+      @canEdit={{@canEdit}}
+      @isAddModalOpen={{this.isAddLinkModalOpen}}
+      @onLinkAdded={{fn (mut this.isAddLinkModalOpen) false}}
+      @closeModal={{fn (mut this.isAddLinkModalOpen) false}}
+    />
     <AuDataTable
       @content={{this.attachments}}
       @isLoading={{this.attachmentsAreLoading}}
