feat: disable redaction screen on file upload
Refs: oph-789

--- a/app/components/process/diagram/visual.hbs
+++ b/app/components/process/diagram/visual.hbs
@@ -93,6 +93,7 @@
   @title="BPMN- of Visiobestand selecteren"
   @helpTextDragDrop="Bestand wordt meteen verwerkt en toegevoegd aan bibliotheek na selectie"
   @accept=".bpmn,.vsdx"
+  @isSensitiveDataDetectInUploadFlow={{false}}
   @updateProcess={{this.addFileToProcess}}
   @extractBpmnElements={{this.extractBpmnElements}}
   @onFinishUpload={{this.diagramUploaded}}
