--- a/app/templates/shared-processes/index.hbs
+++ b/app/templates/shared-processes/index.hbs
@@ -124,6 +124,7 @@
   @title="BPMN- of Visiobestand selecteren"
   @helpTextDragDrop="Bestand wordt meteen verwerkt en toegevoegd aan bibliotheek na selectie"
   @accept=".bpmn,.vsdx"
+  @isSensitiveDataDetectInUploadFlow={{false}}
   @createProcess={{this.createProcess}}
   @extractBpmnElements={{this.extractBpmnElements}}
   @onFinishUpload={{this.diagramUploaded}}
