oph-785 | only add ipdc intances concepts from current bestuur (#155)
* feat: limit search by id to check on geolocation

Refs: oph-785

* feat: fetch products will get instances and concepts for geolocation

When no searchValue the concepts are not fetched. This because we cannot limit it to a location.

Refs: oph-785

* refactor: use the instantie & concept export endpoint to get the entries

Refs: oph-785

* refactor: go back to the get products through product endpoint bt frontend filter the geo location

Far from ideal + we probably are not getting any results on load

Refs: oph-785

* Revert "refactor: go back to the get products through product endpoint bt frontend filter the geo location"

This reverts commit c3d2c415ee7daa1246a0ed58bf7e569ebfafca21.

* refactor: move the helptext for ipdc multi select to the multiselect component

Refs: oph-785

* fix: do not use the export endpoint because then we cannot filter on zoekterm

Refs: oph-785

* refactor: remove load options on open + update helptext for fuzzy search

Refs: oph-785

* refactor: remove load options on open + update helptext for fuzzy search

Refs: oph-785

* fix: when concept and searching by id do not check location

Refs: oph-785

* refactor: directly return the options in the search method

This can be done as we are not loading the options on opening the dropdown

Refs: oph-785

--- a/app/components/process/details-card/ipdc-multiple-select.hbs
+++ b/app/components/process/details-card/ipdc-multiple-select.hbs
@@ -1,18 +1,29 @@
-<div class={{if @error "ember-power-select--error"}}>
-  <PowerSelectMultiple
-    @searchEnabled={{true}}
-    @searchMessage="Typ om te zoeken"
-    @loadingMessage="Aan het laden ..."
-    @noMatchesMessage="Geen resultaten"
-    @options={{this.products}}
-    @search={{perform this.loadIpdcProductsTask}}
-    @onOpen={{perform this.loadIpdcProductsTask}}
-    @selected={{@selected}}
-    @onChange={{@onChange}}
-    @disabled={{@disabled}}
-    as |draftIpdcProduct|
-  >
-    {{language-string-set-nl draftIpdcProduct.name}}
-    ({{draftIpdcProduct.productNumber}})
-  </PowerSelectMultiple>
+<div>
+  <div class={{if @error "ember-power-select--error"}}>
+    <PowerSelectMultiple
+      @searchEnabled={{true}}
+      @searchMessage="Typ om te zoeken"
+      @loadingMessage="Aan het laden ..."
+      @noMatchesMessage="Geen resultaten"
+      @search={{perform this.loadIpdcProductsTask}}
+      @selected={{@selected}}
+      @onChange={{@onChange}}
+      @disabled={{@disabled}}
+      as |draftIpdcProduct|
+    >
+      {{language-string-set-nl draftIpdcProduct.name}}
+      ({{draftIpdcProduct.productNumber}})
+    </PowerSelectMultiple>
+  </div>
+  <div class="au-u-flex au-u-flex--between">
+    <AuHelpText
+      @skin="secondary"
+      class="au-u-margin-top-none au-u-flex-self-start"
+    >
+      Vul hier IPDC-productcodes of -URLs in. Je kan ook zoeken op trefwoorden.
+    </AuHelpText>
+    <AuLinkExternal class="au-u-flex-self-start" href={{this.searchInIpdcUrl}}>
+      Zoek in IPDC
+    </AuLinkExternal>
+  </div>
 </div>
