refactor: update text for sparql module
Refs: oph-877

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -188,8 +188,7 @@
                 </c.header>
                 <c.content>
                   <AuList @divider={{true}} as |Item|>
-                    <Item>Bevraag de databank met behulp van een sparql query en
-                      krijg linked data terug.</Item>
+                    <Item>Bevraag de databank met behulp van een SPARQL query</Item>
                   </AuList>
                 </c.content>
                 <c.footer>
