--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -174,6 +174,32 @@
               </AuCard>
             </div>
           {{/if}}
+          {{#if this.currentSession.isAuthenticated}}
+            <div class="au-o-grid__item au-u-1-2@medium">
+              <AuCard @flex={{true}} as |c|>
+                <c.header
+                  @badgeSkin="brand"
+                  @badgeIcon="folder"
+                  @badgeSize="small"
+                >
+                  <AuHeading @level="2" @skin="4">
+                    SPARQL endpoint
+                  </AuHeading>
+                </c.header>
+                <c.content>
+                  <AuList @divider={{true}} as |Item|>
+                    <Item>Bevraag de databank met behulp van een SPARQL query</Item>
+                  </AuList>
+                </c.content>
+                <c.footer>
+                  <div class="au-u-h-functional au-o-flow au-o-flow--small">
+                    <AuLink @skin="button" @route="sparql">Ga naar sparql
+                      endpoint</AuLink>
+                  </div>
+                </c.footer>
+              </AuCard>
+            </div>
+          {{/if}}
           {{#if this.currentSession.isAdmin}}
             <div class="au-o-grid__item au-u-1-2@medium">
               <AuCard @flex={{true}} as |c|>
@@ -189,7 +215,6 @@
                 <c.content>
                   <AuList @divider={{true}} as |Item|>
                     <Item>Raadpleeg rapporten</Item>
-                    <Item>Bevraag de databank</Item>
                   </AuList>
                 </c.content>
                 <c.footer>
@@ -198,10 +223,6 @@
                       @skin="button"
                       @route="reporting"
                     >Rapportering</AuLink>
-                    <AuLink
-                      @skin="button-secondary"
-                      @route="sparql"
-                    >SPARQL</AuLink>
                   </div>
                 </c.footer>
               </AuCard>
