Implement ICR modal and link new ICR to process; refactor asset selection and scoring logic

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -170,3 +170,26 @@ tr:hover .inventory-row-button-group .au-c-button {
 .color--warning {
   color: var(--au-orange-700);
 }
+.no-border {
+  border: none !important;
+}
+.pointer {
+  cursor: pointer;
+}
+
+.information-asset-pill {
+  &:hover {
+    color: var(--vl-orange-120);
+    background-color: var(--vl-orange-10);
+    border-color: var(--vl-orange-100);
+    transition: 0.2s ease-in-out;
+  }
+  &:active {
+    scale: 0.95;
+  }
+}
+.assets-multiple-select {
+  .ember-power-select-multiple-options > li {
+    flex-grow: 0;
+  }
+}
