Refactor asset status display in multiple select component to use AuPill for better styling

--- a/app/components/process/icr-card/assets-multiple-select.hbs
+++ b/app/components/process/icr-card/assets-multiple-select.hbs
@@ -12,9 +12,19 @@
   >
     {{asset.title}}
     {{#if asset.isDraft}}
-      ⌛ (Concept)
+      <AuPill
+        @skin="default"
+        @icon="clock"
+        @size="small"
+        class="au-u-margin-left-tiny"
+      >
+        Concept
+      </AuPill>
     {{else}}
-      ✅ (Gepubliceerd)
+      <AuPill @skin="success" @size="small" class="au-u-margin-left-tiny">
+        Gepubliceerd
+      </AuPill>
     {{/if}}
+
   </PowerSelectMultiple>
 </div>
